--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-i18n-sample",
   "version": "1.0.0",
-  "description": "",
+  "description": "koaでのi18n対応のサンプル",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,10 +11,10 @@
   "license": "MIT",
   "dependencies": {
     "koa": "^1.2.0",
-    "koa-convert": "^1.2.0",
     "koa-i18n": "^1.2.0",
     "koa-locale": "^1.0.0",
     "koa-route": "^2.4.2",
     "koa-swig": "^2.2.0"
-  }
+  },
+  "devDependencies": {}
 }
